add CNAME to direct pages to xenrogaming.com

--- a/temp.html
+++ b/temp.html
@@ -6,33 +6,21 @@
     <link rel="stylesheet" href="css/temp.css"/>
 </head>
 <body>
-
-    <form action="" method="post">
+    <article>
+        <img src="img/shyguy.jpg" alt="alt text" />
         <ul>
             <li>
-                <label for="name">Enter Your Name:</label>
-                <input id="name" />
+                <a href="#">Articles</a>
             </li>
             <li>
-                <label for="comments">Your Comments:</label>
-                <textarea id="comments"></textarea>
-            </li>
-            <li>
-                <label for="checkbox">Do you like CSS?</label>
-                <input id="css" name="css" type="checkbox"/>
-            </li>
-            <li>
-                <label for="radio">Favorite Language?</label>
-                <input type="radio" /> C
-                <input type="radio" /> C++
-                <input type="radio" /> Java
-                <input type="radio" /> Python
-            </li>
-            <li>
-                <input type="submit" value="Go"/>
+                <a href="#">Web Roundups</a>
             </li>
         </ul>
-
-    </form>
+        <h2>20 Javascript Frameworks Worth Checking Out</h2>
+        <p>Siddarth on Sep 23rd 2011 with 44 comments</p>
+        <p>here is a long paragraph</p>
+        <p>and another one</p>
+        <p>(<a href="#">Continue</a>)</p>
+    </article>
 </body>
 </html>
