--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Xenro Engine</title>
         <meta charset="utf-8"/>
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     </head>
     <body>
         <h1>Xenro Engine</h1>
         <p>Documentation can be found <a href="https://github.com/Jmiller7023/Xenro-Engine">here</a>.</p>
         <p>Learn more about the project <a href="about.html">here.</a></p>
+        <p>Temp code found <a href="temp.html">here.</a></p>
     </body>
 </html>
