Mark website as being under construction

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>Xenro Engine</title>
+        <title>Xenro Engine -Under Construction-</title>
         <meta charset="utf-8"/>
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     </head>
     <body>
         <h1>Xenro Engine</h1>
         <p>Documentation can be found <a href="https://github.com/Jmiller7023/Xenro-Engine">here</a>.</p>
-        <p>Learn more about the project <a href="about.html">here.</a></p>
-        <p>Temp code found <a href="temp.html">here.</a></p>
+<!--         <p>Learn more about the project <a href="about.html">here.</a></p>
+        <p>Temp code found <a href="temp.html">here.</a></p> -->
     </body>
-</html>
+</html> 
